--- a/src/core/static/css/optamos.css
+++ b/src/core/static/css/optamos.css
@@ -486,6 +486,9 @@
   .ml-4 {
     margin-left: calc(var(--spacing) * 4);
   }
+  .ml-6 {
+    margin-left: calc(var(--spacing) * 6);
+  }
   .ml-10 {
     margin-left: calc(var(--spacing) * 10);
   }
@@ -821,9 +824,6 @@
   .flex-2 {
     flex: 2;
   }
-  .flex-4 {
-    flex: 4;
-  }
   .shrink {
     flex-shrink: 1;
   }
@@ -841,6 +841,12 @@
   }
   .resize {
     resize: both;
+  }
+  .list-decimal {
+    list-style-type: decimal;
+  }
+  .list-disc {
+    list-style-type: disc;
   }
   .appearance-none {
     appearance: none;
@@ -862,9 +868,6 @@
   }
   .justify-end {
     justify-content: flex-end;
-  }
-  .gap-15 {
-    gap: calc(var(--spacing) * 15);
   }
   .space-y-6 {
     :where(& > :not(:last-child)) {
@@ -1075,6 +1078,9 @@
   .pl-3 {
     padding-left: calc(var(--spacing) * 3);
   }
+  .pl-8 {
+    padding-left: calc(var(--spacing) * 8);
+  }
   .text-center {
     text-align: center;
   }
@@ -1093,6 +1099,9 @@
   .align-top {
     vertical-align: top;
   }
+  .font-mono {
+    font-family: var(--font-mono);
+  }
   .text-2xl\/9 {
     font-size: var(--text-2xl);
     line-height: calc(var(--spacing) * 9);
@@ -1100,6 +1109,10 @@
   .text-3xl {
     font-size: var(--text-3xl);
     line-height: var(--tw-leading, var(--text-3xl--line-height));
+  }
+  .text-3xl\/9 {
+    font-size: var(--text-3xl);
+    line-height: calc(var(--spacing) * 9);
   }
   .text-base {
     font-size: var(--text-base);
