--- a/src/templates/optamos/_base.html
+++ b/src/templates/optamos/_base.html
@@ -9,7 +9,7 @@
     {% block title %}{% endblock %} - 
     OPTamos
   </title>
-  <link href="{% static "css/optamos.css" %}?id=22-0955" rel="stylesheet">
+  <link href="{% static "css/optamos.css" %}?id=30-1111" rel="stylesheet">
   <link class="favicon" rel="shortcut icon" sizes="126x126" href="/media/optamos/favicon.jpg">
   {% block css %}{% endblock %}
 </head>
@@ -30,8 +30,9 @@
             </li> 
             {% if request.user.is_authenticated %}
               <li class="mr-3"><a {% if menu == "projects" %}class="active"{% endif %} href="{% url "optamos:projects" %}">Projects</a></li>
-              <li><a {% if menu == "account" %}class="active"{% endif %} href="{% url "optamos:account" %}">My Account</a></li>
+              <li class="mr-3"><a {% if menu == "account" %}class="active"{% endif %} href="{% url "optamos:account" %}">My Account</a></li>
             {% endif %}
+              <li><a {% if menu == "about" %}class="active"{% endif %} href="{% url "optamos:about" %}">Methodology</a></li>
           </ul>  
           {% if request.user.is_authenticated %}
             <a href="{% url "optamos:logout" %}">Log out</a>
@@ -60,22 +61,21 @@
     <main class="-mt-32">
       <div class="mx-auto max-w-7xl px-4 pb-12 sm:px-6 lg:px-8">
         <div class="rounded-lg bg-white {% if not remove_padding_main_container %}px-5 py-10 sm:px-6{% endif %} shadow-sm relative">
-          <div class="flex gap-15 ml-10 mr-10">
-            <div class="flex-4">
+          <div class="ml-10 mr-10">
 
-              {% if messages %}
-                <div class="top-message-box mt-5 mb-10">
-                  {% for message in messages %}
-                    <div class="alert {{ message.tags }}" role="alert">
-                      {{ message|safe }}
-                    </div>
-                  {% endfor %}
-                </div>
-              {% endif %}
+            {% if messages %}
+              <div class="top-message-box mt-5 mb-10">
+                {% for message in messages %}
+                  <div class="alert {{ message.tags }}" role="alert">
+                    {{ message|safe }}
+                  </div>
+                {% endfor %}
+              </div>
+            {% endif %}
 
-              {% block content %}
-              {% endblock %}
-            </div>
+            {% block content %}
+            {% endblock %}
+
           </div>
         </div>
       </div>
