--- a/src/templates/optamos/project.html
+++ b/src/templates/optamos/project.html
@@ -53,7 +53,7 @@
     </a>
 
     <section id="criteria" class="pr-5">
-      <h2>Criteria</h2>
+      <h2>Rank options</h2>
       {% if criteria_list %}
         <ul>
         {% for each in criteria_list %}
@@ -69,9 +69,7 @@
 
               {% if each.is_done %}
               <span class="flex size-6 shrink-0 items-center justify-center rounded-lg border border-gray-200 bg-lime-400 text-[0.625rem] font-medium {% if each == criteria %}text-sky-600 border-sky-600{% else %}text-gray-400{% endif %} group-hover:border-sky-600 group-hover:text-sky-600">
-                {% if not each == criteria %}
-                  <svg class="h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M530.8 134.1C545.1 144.5 548.3 164.5 537.9 178.8L281.9 530.8C276.4 538.4 267.9 543.1 258.5 543.9C249.1 544.7 240 541.2 233.4 534.6L105.4 406.6C92.9 394.1 92.9 373.8 105.4 361.3C117.9 348.8 138.2 348.8 150.7 361.3L252.2 462.8L486.2 141.1C496.6 126.8 516.6 123.6 530.9 134z"/></svg>
-                {% endif %}
+                <svg class="h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M530.8 134.1C545.1 144.5 548.3 164.5 537.9 178.8L281.9 530.8C276.4 538.4 267.9 543.1 258.5 543.9C249.1 544.7 240 541.2 233.4 534.6L105.4 406.6C92.9 394.1 92.9 373.8 105.4 361.3C117.9 348.8 138.2 348.8 150.7 361.3L252.2 462.8L486.2 141.1C496.6 126.8 516.6 123.6 530.9 134z"/></svg>
               </span>
               {% else %}
                 <span class="flex size-6 shrink-0 items-center justify-center rounded-lg border border-gray-200 bg-white text-[0.625rem] font-medium {% if each == criteria %}text-sky-600 border-sky-600{% else %}text-gray-400{% endif %} group-hover:border-sky-600 group-hover:text-sky-600">{{ each.name|first }}</span>
@@ -82,6 +80,17 @@
           </li>
         {% endfor %}
 
+        </ul>
+      {% else %}
+        <div class="alert alert-warning">
+          You need to configure criteria for your project.
+          <a href="{% url "optamos:project_settings" project.uid %}">Click here</a> to 
+          edit your project.
+        </div>
+      {% endif %}
+
+      <h2 class="mt-10">Rank criteria</h2>
+      <ul>
         <li>
           <a href="{% url "optamos:project" project.uid %}?rank_all_criteria=true" 
             class="group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold no-underline
@@ -94,9 +103,7 @@
 
             {% if criteria_values == total_required_criteria_values %}
             <span class="flex size-6 shrink-0 items-center justify-center rounded-lg border border-gray-200 bg-lime-400 text-[0.625rem] font-medium {% if page == "rank_all_criteria" %}text-sky-600 border-sky-600{% else %}text-gray-400{% endif %} group-hover:border-sky-600 group-hover:text-sky-600">
-              {% if not page == "rank_all_criteria" %}
-                <svg class="h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M530.8 134.1C545.1 144.5 548.3 164.5 537.9 178.8L281.9 530.8C276.4 538.4 267.9 543.1 258.5 543.9C249.1 544.7 240 541.2 233.4 534.6L105.4 406.6C92.9 394.1 92.9 373.8 105.4 361.3C117.9 348.8 138.2 348.8 150.7 361.3L252.2 462.8L486.2 141.1C496.6 126.8 516.6 123.6 530.9 134z"/></svg>
-              {% endif %}
+              <svg class="h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M530.8 134.1C545.1 144.5 548.3 164.5 537.9 178.8L281.9 530.8C276.4 538.4 267.9 543.1 258.5 543.9C249.1 544.7 240 541.2 233.4 534.6L105.4 406.6C92.9 394.1 92.9 373.8 105.4 361.3C117.9 348.8 138.2 348.8 150.7 361.3L252.2 462.8L486.2 141.1C496.6 126.8 516.6 123.6 530.9 134z"/></svg>
             </span>
             {% else %}
               <span class="flex size-6 shrink-0 items-center justify-center rounded-lg border border-gray-200 bg-white text-[0.625rem] font-medium {% if page == "rank_all_criteria" %}text-sky-600 border-sky-600{% else %}text-gray-400{% endif %} group-hover:border-sky-600 group-hover:text-sky-600">R</span>
@@ -105,15 +112,8 @@
             <span class="truncate">Rank all criteria</span>
           </a>
         </li>
+      </ul>
 
-        </ul>
-      {% else %}
-        <div class="alert alert-warning">
-          You need to configure criteria for your project.
-          <a href="{% url "optamos:project_settings" project.uid %}">Click here</a> to 
-          edit your project.
-        </div>
-      {% endif %}
     </section>
 
     <section class="mt-10" id="inconsistency">
@@ -164,9 +164,25 @@
     {% if request.GET.criteria or page == "rank_all_criteria" %}
       {% if criteria %}
         <h1>{{ criteria }}</h1>
+        <p>
+          With respect to this criteria ({{ criteria }}), how would you compare the following options?
+          For each pair, how strongly do you prefer one over the other?</p>
+        <p class="text-gray-700 text-sm"> Use the blue circle to indicate
+          which option is preferred. The number indicates how strong your preference is 
+          (1 = equally preferred; 3 = slightly more preferred; 5 = strongly more preferred, 7 = very strongly more preferred,
+          9 = extremely more preferred). 
+        </p>
       {% else %}
-        <p class="mb-0 text-xl">Goal:</h1>
-        <h2 class="mb-8">{{ project.goal }}</h2>
+        <h1 class="mb-0 text-xl">Rank all criteria</h1>
+        <p>
+          Indicate how you different criteria compare across the following pairs. Indicate which criteria
+          is more important. 
+        </p>
+        <p class="text-gray-700 text-sm"> Use the blue circle to indicate
+          the relative importance of each criteria. The number indicates how strong the relative importance is 
+          (1 = equally important; 3 = slightly more important; 5 = strongly more important, 7 = very strongly more important,
+          9 = extremely more important). 
+        </p>
       {% endif %}
 
       {% if not pairs %}
@@ -178,7 +194,7 @@
           edit your project.
         </div>
       {% else %}
-        <form method="post">
+        <form method="post" class="mt-10">
           {% for option1, option2 in pairs %}
             <section class="mb-10">
               <div class="flex justify-between">
@@ -194,9 +210,20 @@
             </section>
           {% endfor %}
           {% csrf_token %}
-          <p class="flex justify-end">
-            <button type="submit" class="btn-green">Save &amp; next &raquo;</button>
-          </p>
+
+          {% if page == "rank_all_criteria" %}
+            <p class="flex justify-end">
+              <button type="submit" class="btn-green">Save &amp; finish</button>
+            </p>
+          {% else %}
+            <p class="flex justify-{% if criteria == criteria_list.0 %}end{% else %}between{% endif %}">
+              {% if criteria != criteria_list.0 %}
+                <button type="submit" name="back" value="true" class="btn-white">← Save &amp; back</button>
+              {% endif %}
+              <button type="submit" class="btn-green">Save &amp; next →</button>
+            </p>
+          {% endif %}
+
         </form>
       {% endif %}
 
@@ -213,8 +240,7 @@
             <div class="max-w-xl text-sm text-gray-600">
               <p>
                 Select one of the options from the menu on the left-hand side to get started.
-                You can also <a href="{% url "optamos:project_settings" project.uid %}">edit your project settings</a> or click here to
-                <a href="{% url "optamos:projects" %}">view all your projects</a>.
+                You can also <a href="{% url "optamos:project_settings" project.uid %}">edit your project settings</a>, <a href="{% url "optamos:projects" %}">view all your projects</a>, or <a href="{% url "optamos:project_create" %}">create a new project</a>.
               </p>
             </div>
           </div>
